Fix grid spacing issue in main content
The grids containing cards were not growing to fill the space they were contained in.  My solution was to place the header and grid inside another grid.

--- a/style.css
+++ b/style.css
@@ -194,6 +194,8 @@
 
 .projects {
     grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: min-content 1fr;
 }
 
 .project-card-container {
@@ -240,4 +242,14 @@
 
 .project-card svg:nth-of-type(3) {
     grid-column: 4;
+}
+
+.announcements {
+    display: grid;
+    grid-template-rows: min-content 1fr;
+}
+
+.announcement-card-container {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
 }
